--- a/stack.yaml
+++ b/stack.yaml
@@ -14,4 +14,6 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash.
-extra-deps: []
+extra-deps:
+  - git: https://github.com/sebastiaanvisser/clay.git
+    commit: a68f105f3408b524a3d194d0cfc8ccdc78ba3da2
