Set up default stylesheet.

--- a/package.yaml
+++ b/package.yaml
@@ -44,6 +44,7 @@ executables:
     - blog
     - hakyll
     - clay
+    - text
 
     # Work around https://github.com/sol/hpack/issues/303.
     when:
