Use main branch for new haskell-actions/setup.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: haskell-actions/setup
+      - uses: haskell-actions/setup@main
         with:
           enable-stack: true
 
