--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,8 @@ library:
   source-dirs: src
   dependencies:
   - hakyll
+  - blaze-html
+  - blaze-markup
   - bytestring
   - diagrams-core
   - diagrams-lib
