Group archive page by year.

--- a/package.yaml
+++ b/package.yaml
@@ -34,12 +34,14 @@ library:
   - blaze-html
   - blaze-markup
   - bytestring
+  - containers
   - diagrams-core
   - diagrams-lib
   - diagrams-svg
   - pandoc
   - random
   - svg-builder
+  - time
 
 executables:
   site:
